Symbol Spread. Both Daily and Hourly

--- a/Risk_Aaron/app/static/css/styles.css
+++ b/Risk_Aaron/app/static/css/styles.css
@@ -11,6 +11,11 @@ body {
 }
 
 
+.table-x-scroll-class {
+       overflow-y: hidden;    // use auto; or scroll; to allow vertical scrolling;
+       overflow-x: scroll;    // disable horizontal scroll
+}
+
 
 .table td, .table th {
   vertical-align: middle;
