--- a/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
+++ b/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
@@ -756,6 +756,8 @@
   <div class="col-lg-6 col-md-12 col-sm-12" id="Data_table_Div_{{ value }}"></div>
   {% elif "Hr" in value %}
     <hr style="height:3px;background-color: #333;" class="col-lg-12 col-md-12 col-sm-12">
+  {% elif "H_y_scroll" in value %}
+    <div class="table-x-scroll-class col-lg-12 col-md-12 col-sm-12" id="Data_table_Div_{{ value }}"></div>
   {% elif "H" in value %}
     <div class="col-lg-12 col-md-12 col-sm-12" id="Data_table_Div_{{ value }}"></div>
   {% elif "V" in value %}
