--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -377,6 +377,9 @@
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/martingale_group.php">Martigale Group</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/bluetrader_group.php">Bluetrader Group</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/TrailingStopEA_group.php">cmTrailingStopEA</a></li>
+                <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/MT5_Esunny_Mismatch_Alert.php">MT5 Esunny Mismatch Alert</a></li>
+
+
 
 
                 <div class="dropdown-divider"></div>
