--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -450,6 +450,10 @@
                   <li><a class="dropdown-item" href="https://38.76.4.67:44300/Account/Login?ReturnUrl=%2F">Vantage BGI Trading Hub</a></li>
                   <div class="dropdown-divider"></div>
                   <li><a class="dropdown-item" href="https://147.160.249.167:44300/">UK LD4</a></li>
+                  <li><a class="dropdown-item" href="https://blackwellglobal-bhm-live.onezero.com:44300/Dashboard">UK Bahamas</a></li>
+
+
+
                   <div class="dropdown-divider"></div>
 
 
