--- a/Risk_Aaron/app/templates/Swap_Calculate_results.html
+++ b/Risk_Aaron/app/templates/Swap_Calculate_results.html
@@ -52,8 +52,8 @@
               <form action="{{ url_for('swaps.Swap_upload_form') }}" method="post">
                   {{ form.hidden_tag() }}
                   <div class="container">
-                      <table class="table table-bordered table-sm">
-                          <tr>
+                      <table class="table table-bordered table-sm table-hover">
+                          <tr class="table-info">
                             <th> Symbol </th>
                             <th> Long<br>Average </th>
                             <th> BGI<br>Long </th>
@@ -68,7 +68,7 @@
                           </tr>
                           {% for core_symbol in form.core_symbols %}
                           <tr>
-                            <td>{{ core_symbol.hidden_tag() }}{{ core_symbol.symbol.data }}</td>
+                            <td class="table-success">{{ core_symbol.hidden_tag() }}{{ core_symbol.symbol.data }}</td>
                             <td>{{ core_symbol.avg_long.data  }}</td>
                             <td>{{ core_symbol.long(class_=core_symbol.long_style.data + " form-control") }}</td>
                             <td class="{{core_symbol.broker_1_long_style.data}}">{{ core_symbol.broker_1_long.data }}</td>
