--- a/Risk_Aaron/app/templates/Swap_Calculate_results.html
+++ b/Risk_Aaron/app/templates/Swap_Calculate_results.html
@@ -54,7 +54,7 @@
         <th style="background-color: #BCF90C;"> Difference in Sign </th>
         <th style="background-color: #E74C3C;"> Significant Difference </th>
         <th style="background-color: #F39C12;"> Minor Difference </th>
-        <th style="background-color: #3498DB;"> Fixed Swaps </th>
+        <th style="background-color: #CCD1D1;"> Fixed Swaps </th>
       </tr>
     </table>
           <div>
@@ -62,7 +62,7 @@
                   {{ form.hidden_tag() }}
                   <div class="container">
                       <table class="table table-bordered table-sm table-hover">
-                          <tr style="background-color: #85C1E9">
+                          <tr style="background-color: #317BDF">
                             <th> Symbol </th>
                             <th> Long<br>Average </th>
                             <th> BGI<br>Long </th>
@@ -77,14 +77,14 @@
                           </tr>
                           {% for core_symbol in form.core_symbols %}
                           <tr>
-                            <td style="background-color: #317BDF">{{ core_symbol.hidden_tag() }}<b>{{ core_symbol.symbol.data }}</b></td>
-                            <td>{{ core_symbol.avg_long.data  }}</td>
+                            <td style="background-color: #8851DC;">{{ core_symbol.hidden_tag() }}<b>{{ core_symbol.symbol.data }}</b></td>
+                            <td style="background-color: #85C1E9;">{{ core_symbol.avg_long.data  }}</td>
                             <td style="background-color: {{core_symbol.long_style.data}};">{{ core_symbol.long(class_="form-control") }}</td>
                             <td style="background-color: {{core_symbol.broker_1_long_style.data}};">{{ core_symbol.broker_1_long.data }}</td>
                             <td style="background-color: {{core_symbol.broker_2_long_style.data}};">{{ core_symbol.broker_2_long.data }}</td>
 
-                            <td>{{ core_symbol.avg_short.data }}</td>
-                            <td style="background-color: {{core_symbol.short_style.data}};"">{{ core_symbol.short(class_="form-control") }}</td>
+                            <td style="background-color: #85C1E9;">{{ core_symbol.avg_short.data }}</td>
+                            <td style="background-color: {{core_symbol.short_style.data}};">{{ core_symbol.short(class_="form-control") }}</td>
                             <td style="background-color: {{core_symbol.broker_1_short_style.data}};">{{ core_symbol.broker_1_short.data }}</td>
                             <td style="background-color: {{core_symbol.broker_2_short_style.data}};">{{ core_symbol.broker_2_short.data }}</td>
 
