--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -77,6 +77,26 @@
 
           {% if not current_user.is_anonymous %}
 
+
+          {% if current_user.role in ["Dealing"] %}
+
+          <!-- Level one dropdown -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Risk Tools 😆
+            </a>
+
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+            <li><a class="dropdown-item" href="{{ url_for('main_app.ABook_Matching') + "?send_email_flag=0" }}">MT4/LP ⭐</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('main_app.add_off_set') }}">A Book Offset ➕</a></li>
+            <div class="dropdown-divider"></div>
+            <li><a class="dropdown-item" href="{{ url_for('Risk_Client_Tools_bp.HK_Change_Spread') }}">HK Change Spread</a></li>
+            <div class="dropdown-divider"></div>
+
+          {% endif %}
+
+            {% if current_user.role not in ["Dealing"] %}
           <!-- Level one dropdown -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -86,10 +106,10 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
 
-              {% if current_user.role in ["Admin", "Risk", "Risk_TW", "Dealing"] %}
                 <li><a class="dropdown-item" href="{{ url_for('main_app.ABook_Matching') + "?send_email_flag=0" }}">MT4/LP ⭐</a></li>
                 <li><a class="dropdown-item" href="{{ url_for('main_app.add_off_set') }}">A Book Offset ➕</a></li>
                 <div class="dropdown-divider"></div>
+
               {% endif %}
 
               {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
@@ -129,7 +149,7 @@
                     <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Get_Margin_Trades%20BGI%20-%20V1.3/">REST BGI Margin Trades ⭐</a></li>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Computer_Usage') }}">Server Usage ⭐</a></a></a></li>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Monitor_Risk_Tools') }}">Monitor Risk Tools ⭐</a></li>
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Risk_Client_Tools_bp.HK_Change_Spread') }}">HK Change Spread [New]</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('Risk_Client_Tools_bp.HK_Change_Spread') }}">HK Change Spread</a></li>
                     <div class="dropdown-divider"></div>
 
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.CFH_Soap_Position') }}">CFH Soap Position</a></li>
