--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -586,6 +586,10 @@
               </li>
 
               <li class="nav-item dropdown">
+
+
+              <li><a class="dropdown-item" href="https://primexm.com/xcore-modules/">Prime XM Help</a></li>
+
               <li><a class="dropdown-item" href="https://www.dailyfx.com/economic-calendar">Daily FX Calandar</a></li>
               <li><a class="dropdown-item" href="https://www.poundsterlingforecast.com/">Pound Sterling Forcast</a></li>
               <li><a class="dropdown-item" href="https://global.markets.com/holiday-schedule/">Global Markets Trading Holiday</a></li>
