Updated .hk to HKK. Putting HK Change Spread to live

--- a/Risk_Aaron/app/templates/HK_Change_Spread.html
+++ b/Risk_Aaron/app/templates/HK_Change_Spread.html
@@ -200,7 +200,7 @@
 
             swal(
             'Confirmed (確認)',
-             'Spread is being changed now (點差正在更改)',
+             'Spread is being changed now (點差更新中, 請稍後)',
              'success'
            );
 
