Updated rights for MIS

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -80,7 +80,7 @@
           {% if not current_user.is_anonymous %}
 
 
-          {% if current_user.role in ["Dealing"] %}
+          {% if current_user.role in ["Dealing", "MIS"] %}
 
           <!-- Level one dropdown -->
           <li class="nav-item dropdown">
