--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -418,6 +418,12 @@
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/MT5_Esunny_Mismatch_Alert.php">MT5 Esunny Mismatch Alert</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/mam_yjh_337182.php">mam_yjh_337182</a></li>
 
+                <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/mt5_today_top_login.php">MT5 Login Alerts</a></li>
+                <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/alerts/MT5_Esunny_float_Mismatch_Alert.php">MT5 Esunny Float Mismatch</a></li>
+
+
+
+
 
 
 
