Starting on the AB hedging close.

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -177,6 +177,9 @@
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('notifications_bp.Client_No_Trades') }}">Client no Open symbol position⭐</a></li>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('notifications_bp.Large_volume_Login') }}">Large Volume Traders ⭐</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('Risk_Client_Tools_bp.AB_Hedge_Close') }}">AB_Hedge_Close ⭐</a></li>
+
+
 
 
                   </ul>
