--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -398,6 +398,10 @@
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/Monitoring_tools/MT5_Esunny_Check.php">MT5 Esunny Matching</a></li>
                 <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/Monitoring_tools/MT5_Monitoring_Float.php">MT5 Float Monitoring</a></li>
                 <li><a class="dropdown-item" href="{{ url_for('mt5_monitoring.HK_Copy_STP') }}">🐼 HK Copy Trade 👾</a></li>
+                <li><a class="dropdown-item" href="http://202.88.105.3/yudi/RISK/Monitoring_tools/ab_hedged_Client/index.php">UK A/B Hedge</a></li>
+
+
+
 
 
                 <div class="dropdown-divider"></div>
